test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_open_channel_expr.draco
proc main() void : a := open(ch); corp;

