test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_union_as_identifier.draco
int union;
 
proc main() void : a := 1; corp;
